--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -29,7 +29,7 @@ jobs:
         git update-ref -d refs/heads/gh-pages
         rm -rf *
         mv ../book/* .
-        cp -R ../Lectures/figures/ .
+        cp -R ../Articles/figures/ .
         git add .
         git commit -m "Deploy $GITHUB_SHA to gh-pages"
         git push --force
